refactoring to fit java 21